rewrite docs
