# broker-service/cmd/api/routes.go
@@ -29,7 +29,9 @@ func (app *Config) routes() http.Handler {
 		httpSwagger.URL(fmt.Sprintf("http://localhost:%s/swagger/doc.json", webPort)), //The url pointing to API definition
 	))
 
-	mux.Post("/user", app.RegisterUser)
+	mux.Route("/auth", func(mux chi.Router) {
+		mux.Post("/registration", app.RegisterUser)
+	})
 
 	return mux
 }
